# filmrolls-rs

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  codecov.yml
.github/workflows/: common.yml  pull_request.yml  push.yml  release.yml
src/: clap.rs  cmds.rs  main.rs  metadata.rs  negative.rs  rolls.rs  types.rs
src/negative/: exif.rs  xmp.rs
src/rolls/: filmrolls.rs  lightme.rs
tests/: apply-metadata.trycmd  cli_tests.rs  list-frames.trycmd  list-rolls.trycmd  tag.trycmd
tests/data/: 20160513-A0012+001.tiff  filmrolls.xml  lightme.json  metadata.toml
