[package]
name = "filmrolls"
version = "0.1.0"
authors = ["Simon Sigurdhsson <Sigurdhsson@gmail.com>"]
description = "Tag TIFF files with EXIF data extracted from XML"
repository = "https://github.com/urdh/filmrolls-rs/"
keywords = ["exif", "tool", "photography"]
categories = ["command-line-utilities", "multimedia::images"]
license = "ISC"

edition = "2021"
rust-version = "1.75"
build = "build.rs"

[dependencies]
clap-verbosity-flag = "2.1"
comfy-table = "7.1"
env_logger = "0.11"
dms-coordinates = "1.3"
itertools = "0.12"
log = "0.4"
shadow-rs = "0.26"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "4.4"
features = ["cargo", "color", "derive"]

[dependencies.clio]
version = "0.3"
features = ["clap-parse"]

[dependencies.color-eyre]
version = "0.6"
default-features = false

[dependencies.num-rational]
version = "0.4"
features = ["serde"]

[dependencies.owo-colors]
version = "4.0"
features = ["supports-colors"]

[dependencies.quick-xml]
version = "0.31"
features = ["serialize", "serde-types"]

[dependencies.rust_decimal]
version = "1.33"
features = ["maths"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3.6"
features = ["macros"]

[dev-dependencies]
pretty_assertions = "1.4"
rust_decimal_macros = "1.33"
trycmd = "0.14"

[build-dependencies]
shadow-rs = "0.26"

[profile.dev.package.backtrace]
opt-level = 3
