[package]
name = "filmrolls"
version = "0.1.1"
authors = ["Simon Sigurdhsson <Sigurdhsson@gmail.com>"]
description = "Tag TIFF files with EXIF data extracted from XML"
repository = "https://github.com/urdh/filmrolls-rs/"
keywords = ["exif", "xmp", "tool", "photography"]
categories = ["command-line-utilities", "multimedia::images"]
license = "ISC"

edition = "2021"
rust-version = "1.82"
build = "build.rs"

[dependencies]
clap-verbosity-flag = "3.0"
comfy-table = "7.1"
env_logger = "0.11"
dms-coordinates = "1.3"
itertools = "0.14"
lazy-regex = "3.4"
little_exif = "0.6"
log = "0.4"
mime_guess = "2.0"
num-integer = "0.1"
num-traits = "0.2"
serde_json = "1.0"
shadow-rs = "1.2"
thiserror = "2.0"
ucs2 = "0.3"

[dependencies.chrono]
version = "0.4"
features = ["now", "serde"]

[dependencies.clap]
version = "4.5"
features = ["cargo", "color", "derive"]

[dependencies.clio]
version = "0.3"
features = ["clap-parse"]

[dependencies.color-eyre]
version = "0.6"
default-features = false

[dependencies.num-rational]
version = "0.4"
features = ["serde"]

[dependencies.owo-colors]
version = "4.0"
features = ["supports-colors"]

[dependencies.quick-xml]
version = "0.38"
features = ["serialize", "serde-types"]

[dependencies.rust_decimal]
version = "1.35"
features = ["maths"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3.7"
features = ["macros", "json"]

[dependencies.toml]
version = "0.9"
features = ["serde"]

[dependencies.xmp_toolkit]
version = "1.0"
features = ["chrono"]

[dev-dependencies]
pretty_assertions = "1.4"
rust_decimal_macros = "1.34"
trycmd = "0.15"

[build-dependencies]
shadow-rs = "1.2"

[profile.dev.package.backtrace]
opt-level = 3
